--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
    
        </ul>
     </header>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+    
+        </div>
+    </section>
 </body>
 </html>
